[package]
name = "cncli"
version = "0.0.6"
edition = "2021"
description = "cyphernode cli admin control"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.1"
clap = "2.25.1"
git2 = "0.15.0"
ctrlc = { version = "3.0", features = ["termination"] }
run_script = "0.10.0"